Add all user endpoints in the documentation
